samples/_failures_safe/1761787664_1b21a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4483b55c.c: In function ‘graph_print_distances’:
./samples/SAFE/__tmp_4483b55c.c:162:13: error: expected identifier at end of input
  162 |             printf("Node %s: distance %d\n", g->
      |             ^~~~~~
./samples/SAFE/__tmp_4483b55c.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4483b55c.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4483b55c.c:162:13: error: expected declaration or statement at end of input
